apps/base/headscale/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale-headplane
  labels:
    app: headscale-headplane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headscale-headplane
  template:
    metadata:
      labels:
        app: headscale-headplane
    spec:
      shareProcessNamespace: true
      serviceAccountName: headplane-serviceaccount
      containers:
        - name: headplane
          image: ghcr.io/tale/headplane:0.3.9
          volumeMounts:
            - name: headscale-config
              mountPath: /etc/headscale

        - name: headscale
          image: headscale/headscale:0.23.0
          command: ['headscale', 'serve']
          volumeMounts:
            - name: headscale-data
              mountPath: /var/lib/headscale
            - name: headscale-config
              mountPath: /etc/headscale

      volumes:
        - name: headscale-data
          persistentVolumeClaim:
            claimName: headscale-data
        - name: headscale-config
          configMap:
            name: headscale-config
