apps/base/headscale/network.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: headscale-network-policy
spec:
  podSelector:
    matchLabels:
      app: headscale-headplane
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: headscale-headplane
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: headscale-headplane
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 3000

    # Allow egress to Kubernetes API server on port 443
    - to:
        - ipBlock:
            cidr: 10.43.0.1/32
      ports:
        - protocol: TCP
          port: 443
